2012-12-24  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-srvr.el (gnus-browse-delete-group): Fix syntax error.

	* message.el (message-ignored-news-headers): Always remove
	X-Message-SMTP-Method to avoid information leakage if the user
	mistakenly inserts the header into news messages.

	* gnus-srvr.el (gnus-browse-delete-group): New command and keystroke.

	* gnus-sum.el (gnus-summary-hide-thread): If point were further to the
	right than four characters, this command would move point to
	`point-max'.  Don't do that.

	* gnus-group.el (gnus-group-read-ephemeral-group): Set the active data
	to nil to allow re-selecting groups that gain articles.
	(gnus-bug-group-download-format-alist): Update the URL.

2012-12-23  Andreas Schwab  <schwab@suse.de>

	* shr.el (shr-tag-em): Render em as italic, not bold.

2012-12-23  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-int.el (gnus-backend-trace): Factor out into its own function
	for reuse.
	(gnus-open-server): Use it to add more tracing.
	(gnus-finish-retrieve-group-infos): Add backend tracing.
	(gnus-backend-trace): Also note the elapsed seconds.

2012-12-22  Philipp Haselwarter  <philipp@haselwarter.org>

	* gnus-sync.el (gnus-sync-file-encrypt-to, gnus-sync-save): Set
	epa-file-encrypt-to from variable to avoid querying.

2012-12-14  Akinori MUSHA  <knu@iDaemons.org>  (tiny change)

	* sieve-mode.el (sieve-font-lock-keywords):
	Keywords should be word delimited.  (Bug#13173)

2012-12-13  Andreas Schwab  <schwab@suse.de>

	* tls.el (tls-program): Update customize type.

2012-12-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-browse-html-parts): Use <div align="left">
	instead of <pre> to align message header.

2012-12-12  Sam Steingold  <sds@gnu.org>

	* gnus.el (gnus-other-frame-resume-function): Add user option.
	(gnus-other-frame): Call `gnus-other-frame-resume-function' on resume.

2012-12-06  Sam Steingold  <sds@gnu.org>

	* gnus-start.el (gnus-before-resume-hook): Add.