@@ -1,3 +1,9 @@
+2012-12-25  Lars Ingebrigtsen  <larsi@gnus.org>
+
+	* gnus-sum.el (gnus-summary-push-marks-to-backend): Push the complete
+	mark state when moving articles.  Otherwise unticked articles will get
+	their ticks back after moving.
+
 2012-12-24  Lars Ingebrigtsen  <larsi@gnus.org>
 
 	* gnus-srvr.el (gnus-browse-delete-group): Fix syntax error.
